@@ -3,7 +3,7 @@ use strict;
 use warnings;
 
 use Test::More;
-use Math::Prime::Util::GMP qw/powint mulint addint subint divint modint divrem tdivrem absint negint/;
+use Math::Prime::Util::GMP qw/powint mulint addint subint divint modint divrem tdivrem absint negint lshiftint rshiftint rashiftint/;
 use Math::BigInt;  # Don't use GMP so we don't have to work around bug
 
 my $use64 = (~0 > 4294967296 && 18446744073709550592 != ~0);
@@ -30,10 +30,32 @@ my @subints = (
 );
 
 my @quotients = (  # trunc, floor, euclidian
-  ["+ +",  "39458349850349850394853049583049",  "85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398579"],
-  ["+ -",  "39458349850349850394853049583049", "-85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579"],
-  ["- +", "-39458349850349850394853049583049",  "85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398580"],
-  ["- -", "-39458349850349850394853049583049", "-85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580"],
+  ["S + +", "9949242744253247", "64", "155456917878956", "155456917878956", "155456917878956"],
+  ["S - +", "-9949242744253247", "64", "-155456917878956", "-155456917878957", "-155456917878957"],
+  ["L + +",  "39458349850349850394853049583049",  "85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398579"],
+  ["L + -",  "39458349850349850394853049583049", "-85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398579"],
+  ["L - +", "-39458349850349850394853049583049",  "85889", "-459410982202026457344398579", "-459410982202026457344398580", "-459410982202026457344398580"],
+  ["L - -", "-39458349850349850394853049583049", "-85889",  "459410982202026457344398579",  "459410982202026457344398579",  "459410982202026457344398580"],
+);
+
+my @negshifts = (
+  # n, k,  >>, >>arith
+  [ 0, 1,  0, 0],
+  [-1, 1,  0, -1],
+  [-5, 1,  -2, -3],
+  [-8, 2,  -2, -2],
+  ["-307385513", 6, -4802898, -4802899],
+  ["-637526413", 6, -9961350, -9961351],
+  ["-2045651239", 6, -31963300, -31963301],
+  ["-3675663743", 6, -57432245, -57432246],
+  ["-2332267979728172537", 6, "-36441687183252695", "-36441687183252696"],
+  ["-8408654401686460807", 6, "-131385225026350950", "-131385225026350951"],
+  ["-17640827963513397449", 6, "-275637936929896835", "-275637936929896836"],
+  ["-32659506018295865747", 6, "-510304781535872902", "-510304781535872903"],
+  ["-79231600218559026832557301750107210001", 6, "-1237993753414984794258707839845425156", "-1237993753414984794258707839845425157"],
+  ["-131954888069700539887213633881194728277", 6, "-2061795126089070935737713029393667629", "-2061795126089070935737713029393667630"],
+  ["-254262665582332530470619504253273698569", 6, "-3972854149723945788603429753957401540", "-3972854149723945788603429753957401541"],
+  ["-416649423645764932216789232242651032187", 6, "-6510147244465077065887331753791422377", "-6510147244465077065887331753791422378"],
 );
 
 plan tests => 0
@@ -46,6 +68,7 @@ plan tests => 0
             + 2                              # divrem
             + 2                              # tdivrem
             + 4 * scalar(@quotients)         # signed bigint division
+            + 4 + 3*scalar(@negshifts)       # shiftint
             + 1                              # absint
             + 1                              # negint
             + 0;
@@ -150,6 +173,20 @@ for my $s (@quotients) {
   is( modint($n, $m), $rf, "large modint  $signs" );
   is_deeply( [divrem($n, $m)], [$qe, $re], "large divrem  $signs" );
   is_deeply( [tdivrem($n, $m)], [$qt, $rt], "large tdivrem $signs" );
+}
+
+###### lshiftint
+is_deeply([map { lshiftint($_) } 0..50], [map { $_ << 1 } 0..50], "lshiftint(0..50)");
+is_deeply([map { rshiftint($_) } 0..50], [map { $_ >> 1 } 0..50], "rshiftint(0..50)");
+is_deeply([map { rashiftint($_) } 0..50], [map { $_ >> 1 } 0..50], "rashiftint(0..50)");
+is_deeply([map { lshiftint($_,5) } -65 .. 65], [map { $_ * 32 } -65 .. 65], "lshiftint(-65 .. 65, 5)");
+
+for my $d (@negshifts) {
+  my($n, $k, $rs, $ras) = @$d;
+  my $ls = mulint($n, powint(2,$k));
+  is( lshiftint($n,$k), $ls, "lshiftint($n,$k) = $ls" );
+  is( rshiftint($n,$k), $rs, "rshiftint($n,$k) = $rs" );
+  is( rashiftint($n,$k), $ras, "rashiftint($n,$k) = $ras" );
 }
 
 ###### absint
